fix: Node hover now comes on right and fixed overlapping  at current node (#1316)
* fix: Node hover shour come on right

* fix: issues

* fix: issues

* fix: issues

* fix: issues

--- a/src/modules/70-pipeline/components/Diagram/node/DefaultNode.module.scss
+++ b/src/modules/70-pipeline/components/Diagram/node/DefaultNode.module.scss
@@ -96,3 +96,11 @@
     white-space: break-spaces !important;
   }
 }
+
+.hoverName {
+  :global {
+    .bp3-popover-content p {
+      max-width: 200px !important;
+    }
+  }
+}
